WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12364
REGRESSSION (NativeListBox): Selected option's background is not clipped to the list box
https://bugs.webkit.org/show_bug.cgi?id=12364
Summary
REGRESSSION (NativeListBox): Selected option's background is not clipped to t...
mitz
Reported
2007-01-21 23:45:30 PST
See the URL. The background of the last option can paint outside the list box.
Attachments
Intersect the item background rect with the control clip
(31.55 KB, patch)
2007-01-22 09:03 PST
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-01-22 09:03:25 PST
Created
attachment 12604
[details]
Intersect the item background rect with the control clip
Darin Adler
Comment 2
2007-01-22 09:46:58 PST
Comment on
attachment 12604
[details]
Intersect the item background rect with the control clip r=me
Sam Weinig
Comment 3
2007-01-22 13:56:06 PST
Landed in
r19033
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug