LayoutTests:

Reviewed by Darin.

        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=12364
          REGRESSSION (NativeListBox): Selected option's background is not clipped to the list box

        * fast/forms/select-item-background-clip-expected.checksum: Added.
        * fast/forms/select-item-background-clip-expected.png: Added.
        * fast/forms/select-item-background-clip-expected.txt: Added.
        * fast/forms/select-item-background-clip.html: Added.

WebCore:

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12364
          REGRESSSION (NativeListBox): Selected option's background is not clipped to the list box

        Test: fast/forms/select-item-background-clip.html

        * rendering/RenderListBox.cpp:
        (WebCore::RenderListBox::paintItemBackground): Intersect the item's rect with
        the list box's clip rect.



Canonical link: https://commits.webkit.org/16009@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19033 268f45cc-cd09-0410-ab3c-d52691b4dbfc