WebCore/rendering/RenderListBox.cpp
@@ -347,8 +347,11 @@ void RenderListBox::paintItemBackground(PaintInfo& paintInfo, int tx, int ty, in
         backColor = element->renderStyle() ? element->renderStyle()->backgroundColor() : style()->backgroundColor();
 
     // Draw the background for this list box item
-    if (!element->renderStyle() || element->renderStyle()->visibility() != HIDDEN)
-        paintInfo.context->fillRect(itemBoundingBoxRect(tx, ty, listIndex), backColor);
+    if (!element->renderStyle() || element->renderStyle()->visibility() != HIDDEN) {
+        IntRect itemRect = itemBoundingBoxRect(tx, ty, listIndex);
+        itemRect.intersect(controlClipRect(tx, ty));
+        paintInfo.context->fillRect(itemRect, backColor);
+    }
 }
 
 bool RenderListBox::isPointInScrollbar(HitTestResult& result, int _x, int _y, int _tx, int _ty)
